--- a/index.html
+++ b/index.html
@@ -1,75 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel='stylesheet' media='screen and (min-width: 961px)' href='css/d.css'> 
-<link rel='stylesheet' media='screen and (max-width: 960px)' href='css/m.css'>
-<script src='js/js.js'></script>
-</head>
+<html lang="es">
+
+	<head>
+		<title>Examen</title>
+		<meta http-equiv=Content-Type content="text/html; charset=UTF-8">
+		<meta name="description" content="HTML XML JAVASCRIP ">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel='stylesheet' media='screen and (min-width: 961px)' href='css/d.css'> 
+		<link rel='stylesheet' media='screen and (max-width: 960px)' href='css/m.css'> 
+		<script src='js/js.js'></script>
+	</head>
+
 <body>
+	<div id="homeDiv">
+		<br>
+		<h5>DAM1 Examen Tipo Test</h5>
+	</div>
+	<div id= "index">
+			<br>
+			<p>El objetivo del Examen : <br><br>
+			En este examen pondrás a prueba tus conocimientos sobre cultura general. Las preguntas contestadas 
+			correctamente sumarán un punto y las contestadas incorrectamente no tendrán ningún 
+			tipo de sanción. A continuación, se mostrará el enlace para comenzar el examen.
+			</p>
+			
+	<img src="img/test1.png" alt="Examen tipo test">
+	<ul id="enlaceIndex">
+		<li><a href="examen.html"><b>Prueba tus conocimientos</b></a></li>
+	</ul>
+	<br><br>
+	</div>
+			
 
- <form id='myform'>
- 
- <!-- text -->
- <h3 id='tituloInput'></h3>
- <input id='num' type='text'>
- <br><br>
- 
- <h3 id='tituloInput1'></h3>
- <input id='num1' type='text'>
- <br><br>
-
-<!--Select --> 
- <h3 id='tituloSelect'></h3>
- <select id='sel'>
-  <option selected value="-1">Selecciona una...</option>
- </select>
- <br><br>
- 
- <h3 id='tituloSelect1'></h3>
- <select id='sel1'>
-  <option selected value="-1">Selecciona una...</option>
- </select>
- <br><br>
- 
- <!--Radio -->
- <div>
- <h3 id='tituloRadio'></h3>
- <div id='radioDiv'></div>
- </div>
- <br><br>
- 
- <div>
- <h3 id='tituloRadio1'></h3>
- <div id='radioDiv1'></div>
- </div>
- <br><br>
-
- <!--Checkbox -->
- <div>
- <h3 id='tituloCheckbox'></h3>
- <div id='checkboxDiv'></div>
- <br><br>
-</div>
- 
- <div>
- <h3 id='tituloCheckbox1'></h3>
- <div id='checkboxDiv1'></div>
- <br><br>
-</div>
-
-<!--Pregunta tipo Label-->
-<div>
-	<h3 id='tituloLabel'></h3>
-	<div id='labelDiv'></div>
- <br><br>
-</div>
-
-<input type='submit' value='Corregir'>
- 
-</form>
-
- <div id='resultadosDiv'></div>
- 
 </body>
 </html>
