--- a/examen.html
+++ b/examen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-		<title>Examen</title>
+		<title>Universidad Dr. DAM</title>
 		<meta http-equiv=Content-Type content="text/html; charset=UTF-8">
 		<meta name="description" content="HTML XML JAVASCRIP ">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
 	<div id="examenDiv">
 		<br/>
 		<img id="test" src="img/test1.png" alt="Examen tipo test">
-		<h5>DAM1 Examen Tipo Test</h5>
+		<h5>Universidad Dr. DAM</h5>
 		<div id="menu">
 			<ul id="enlaceExamen">
 				<li><a href="index.html"><b>Volver a Inicio</b></a></li>
