--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 	<head>
-		<title>Examen</title>
+		<title>Universidad Dr. DAM</title>
 		<meta http-equiv=Content-Type content="text/html; charset=UTF-8">
 		<meta name="description" content="HTML XML JAVASCRIP ">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 <body>
 	<div id="homeDiv">
 		<br>
-		<h5>DAM1 Examen Tipo Test</h5>
+		<h5>Universidad Dr. DAM</h5>
 	</div>
 	<div id= "index">
 			<br>
